Corrected some alignment issues for faq page, tablet version. Corrections to header/footer will need to be made

--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ html{
 }
 
 body {
+  background-color: #527158;
   color: #d8dbe3;
   font-family: 'Open Sans', sans-serif;
   line-height: 1.6;
@@ -145,27 +146,6 @@ address{
     margin-top: 30px;
   }
 
-  input[type=text] {
-    box-sizing: border-box;
-    width: 100%;
-    color: #2a423a;
-    font-style: italic;
-    padding: 1em;
-  }
-
-  input[type=button] {
-    width: 100%;
-    padding: 20px 0;
-    margin-top: 20px;
-    background-color: #2a423a;
-    font-family: 'Poppins', Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    font-size: 1.125em;
-    color: #e2e3ed;
-    border: none;
-    text-align: center;
-    text-transform: uppercase;
-  }
 
 
 /* ------------Header and Footer Base Styles --------------*/
@@ -436,11 +416,10 @@ input[type=button] {
  /* ==========================================================================
    FAQ Page
 ========================================================================== */
-body{
-  background-color: #527158;
-}
+
 
 .faq{
+  background-color: #527158;
   align-items: center;
   display: flex;
   flex-flow: row wrap;
@@ -453,16 +432,22 @@ body{
   flex-flow: row wrap;
   justify-content: center;
   margin: 50px 0 0 0;
+  padding: 20px;
 }
 
 .faq h2{
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content{
   margin-bottom: 50px;
 }
 
+.faq-content h4 {
+  font-weight: 700;
+  line-height: 1.333;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -552,11 +537,21 @@ body{
    ========================================================================== */
 @media only screen and (min-width: 768px){
   /*tablet styles here*/
+  /*General styles*/
+
   .content-wrapper{
     max-width: 640px;
     margin: 100px 0;
   }
 
+h2{
+  font-size: 2.25em;
+  line-height:normal;
+}
+
+h3{
+  font-size: 2.4rem;
+}
   /*Header*/
   header{
     justify-content: space-around;
@@ -641,7 +636,7 @@ body{
     width:100%;
   }
   /*=========================================================================
-  About PAGE
+  About Page Tablets
   ===========================================================================
   */
   .mission-content{
@@ -663,22 +658,31 @@ body{
     align-items: flex-start;
   }
   /*=========================================================================
-  FAQ PAGE
+  FAQ Page Tablets
   ===========================================================================
   */
-  header{
-    padding: 15px 0;
-  }
+
+
 
 .faq .content-wrapper{
   justify-content: space-between;
 }
+
+
 .faq-content{
   flex-basis: 45%;
 }
+
 .faq h2{
   width: 100%;
 }
+
+.faq h4,
+  .faq p {
+      font-size: 1.8rem;
+      line-height: 1.125;
+  }
+
  }
 
 /*=======================================================================
